<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/saveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save" />

    <Button
        android:id="@+id/close_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Close" />

    <EditText
        android:id="@+id/addTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/addText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/text" />

</LinearLayout>