<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaveSetting"
        android:id="@+id/SaveSettingBtn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TextSize"
        android:textSize="20sp"
        android:id="@+id/textSize_textView"
        android:layout_below="@+id/SaveSettingBtn"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:text="10"
        android:id="@+id/TextSize"
        android:layout_toRightOf="@id/textSize_textView"
        android:layout_alignTop="@+id/textSize_textView"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ColorText"
        android:textSize="20sp"
        android:id="@+id/textColor_textView"
        android:layout_below="@+id/textSize_textView"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="21sp"
        android:id="@+id/TextColor"
        android:text="@color/colorPrimaryDark"
        android:layout_toRightOf="@id/textColor_textView"
        android:layout_alignTop="@+id/textColor_textView"
        />


</RelativeLayout>